# SimTradeData

./: .gitignore  CHANGELOG.md  MISSING_FIELDS_ANALYSIS.md  MOOTDX_DATETIME_ERROR_ANALYSIS.md  README.md  README_CN.md  README_zh.md  analysis_report.md  config.yaml  pyproject.toml
.github/: FUNDING.yml
config/: data_sources.json.example  data_sources.yaml.example
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  Architecture_Guide.md  BaoStock_Complete_API_Systematic_Analysis.md  CLI_USAGE_GUIDE.md  DEVELOPER_GUIDE.md
docs/baostock_api/: BaoStock_Quick_Reference.md
examples/: interfaces_demo.py
scripts/: check_integrity.py  check_simtradedata_etf.py  clean_mootdx_data.py  debug_etf_download.py  download.py  download_efficient.py  download_mootdx.py  download_us.py  export_parquet.py  fix_calendar.py  import_tdx_day.py  release_data.sh  test_baostock_etf.py  test_smart_router_live.py  verify_data_integrity.py
simtradedata/: cli.py
simtradedata/api/: middleware.py  router.py
simtradedata/cache/: __init__.py  cache.py  decorator.py
simtradedata/config/: defaults.py  mootdx_finvalue_map.py  production.py
simtradedata/converters/: data_converter.py
simtradedata/data_sources/: baostock_adapter.py  manager.py  mootdx_adapter.py  mootdx_column_mappings.py  mootdx_provider.py  online_providers.py  provider.py  qstock_adapter.py  registry.py
simtradedata/database/: schema.py
simtradedata/extended_data/: sector_data.py  (+1 more)
tests/: conftest.py  test_batch_financial_optimization.py  test_cache.py  test_circuit_breaker.py  test_code_utils.py  test_import_tdx_etf.py
(+47 files in other folders)
