[project]
name = "simtradedata"
version = "0.1.0"
description = "为 simtradelab 项目提供数据支持的配套工具库"
authors = [
    {name = "kayou",email = "kayou@duck.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mootdx (>=0.11.0,<0.12.0)",
    "baostock>=0.8.9,<0.9.0",
    "qstock>=1.3.8,<1.4.0",
    "backtrader>=1.9.78.123,<1.10.0",
    "pyyaml>=6.0.2,<7.0.0",
    "pyfolio-reloaded (>=0.9.9,<0.10.0)",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<0.35.0"
]

[project.scripts]
simtradedata = "simtradedata.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pandas = "^2.3.1"
flask = "^3.1.1"
flask-cors = "^6.0.1"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
pre-commit = "^4.2.0"
psutil = "^7.0.0"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.1.0"
